# HomeworkChepizhenko

./: .flake8  README.md  example.py  pyproject.toml  testing.py
src/: masks.py  processing.py  widget.py
